1.Form,Box等布局组件增加属性labelPosition和labelAlign 2.所有renderer可以调用任何函数，如：obj.renderer 3.Window增加属性usecache 4.Window修复bug,当非modal窗口打开时，之前所有modal窗口的遮盖消失的问题